--- a/src/scripts/Components/TabPanel/Browse/List/List.scss
+++ b/src/scripts/Components/TabPanel/Browse/List/List.scss
@@ -15,7 +15,7 @@
     transition: opacity 0.2s, visibility 0s linear 0.2s;
   }
 
-  @include scroll-bar($c3, lighten($c1, 20%));
+  @include scroll-bar(#ffffff, #5f6979);
 
   &:before {
     content: " ";
