--- a/src/scripts/Components/TabPanel/Browse/Order/Order.scss
+++ b/src/scripts/Components/TabPanel/Browse/Order/Order.scss
@@ -28,7 +28,7 @@
 }
 .result-hits {
   font-size: 0.8em;
-  color: #808080;
+  color: #697886;
   font-weight: 400;
   padding-left: 0.4em;
 }
@@ -42,13 +42,13 @@ ul.sort-by-list {
 
     & > a {
       display: block;
-      color: #808080;
+      color: #697886;
       padding: 0.25em 0.75em;
       font-size: 0.9em;
       text-decoration: none;
 
       &:hover {
-        color: darken(#808080, 20%);
+        color: darken(#697886, 20%);
       }
       &:focus {
         box-shadow: 0 0 1px 1px #1a93f4;
@@ -57,11 +57,8 @@ ul.sort-by-list {
 
       &.hightlight {
         font-weight: 600;
-        color: #020202;
-
-        &:hover {
-          color: darken(#020202, 20%);
-        }
+        color: #000000;
+        text-decoration: underline;
       }
     }
   }
