--- a/src/scripts/Components/TabPanel/Browse/Search/Search.scss
+++ b/src/scripts/Components/TabPanel/Browse/Search/Search.scss
@@ -35,9 +35,19 @@
   width: 100%;
   box-sizing: border-box;
 
+  &::placeholder {
+    color: #000000;
+  }
+
   &:focus {
     border-color: #3ba0f2;
+    background-color: #fff;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
     outline: none;
+
+    &::placeholder {
+      color: #697585;
+    }
   }
   &:before {
     background: none;
